--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -16,10 +16,10 @@ Cabal-Version:       >=1.8
 
 
 Library
-    Build-Depends:     base >= 4.5
+    Build-Depends:     base >= 4.5, bindings-DSL -any
     Extra-Libraries:   alpm
     Hs-Source-Dirs:    lib
-    Exposed-Modules:   Distribution.ArchLinux.Libalpm
+    Exposed-Modules:   Distribution.ArchLinux.Libalpm, Distribution.ArchLinux.Libalpm.Raw
 
 Executable halp
     Build-Depends:     base >= 4.5, alpmhs
