--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -13,6 +13,7 @@ Maintainer:          Vladimir Matveev <dpx.infinity@gmail.com>
 Category:            Distribution
 Build-Type:          Simple
 Cabal-Version:       >=1.8
+Extra-Source-Files:  README.md
 
 
 Library
