--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -20,6 +20,7 @@ Library
     Build-Depends:     base >= 4.5, bindings-DSL -any
     Extra-Libraries:   alpm
     Hs-Source-Dirs:    lib
+    C-Sources:         lib/helper.c
     Exposed-Modules:   Distribution.ArchLinux.Libalpm
                      , Distribution.ArchLinux.Libalpm.Raw
                      , Distribution.ArchLinux.Libalpm.Raw.Types
@@ -31,7 +32,8 @@ Library
                      , Distribution.ArchLinux.Libalpm.Raw.List
                      , Distribution.ArchLinux.Libalpm.Wrapper
                      , Distribution.ArchLinux.Libalpm.Wrapper.List
-    Extensions:        ForeignFunctionInterface
+    Extensions:        ForeignFunctionInterface, FlexibleInstances,
+                       TypeSynonymInstances
 
 Executable halp
     Build-Depends:     base >= 4.5, alpmhs
