--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -33,7 +33,7 @@ Library
                      , Distribution.ArchLinux.Libalpm.Wrapper
                      , Distribution.ArchLinux.Libalpm.Wrapper.List
     Extensions:        ForeignFunctionInterface, FlexibleInstances,
-                       TypeSynonymInstances
+                       TypeSynonymInstances, MultiParamTypeClasses
 
 Executable halp
     Build-Depends:     base >= 4.5, alpmhs
