--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -32,6 +32,7 @@ Library
                      , Distribution.ArchLinux.Libalpm.Raw.List
                      , Distribution.ArchLinux.Libalpm.Wrapper
                      , Distribution.ArchLinux.Libalpm.Wrapper.List
+                     , Distribution.ArchLinux.Libalpm.Wrapper.Types
     Extensions:        ForeignFunctionInterface, FlexibleInstances,
                        TypeSynonymInstances, MultiParamTypeClasses,
                        ScopedTypeVariables, FunctionalDependencies,
