--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -36,6 +36,7 @@ Library
     Extensions:        ForeignFunctionInterface, FlexibleInstances,
                        TypeSynonymInstances, MultiParamTypeClasses,
                        ScopedTypeVariables, FunctionalDependencies
+    GHC-Options:       -O2
 
 Executable halp
     Build-Depends:     base >= 4.5, alpmhs
