--- a/alpmhs.cabal
+++ b/alpmhs.cabal
@@ -36,7 +36,7 @@ Library
     Extensions:        ForeignFunctionInterface, FlexibleInstances,
                        TypeSynonymInstances, MultiParamTypeClasses,
                        ScopedTypeVariables, FunctionalDependencies,
-                       GeneralizedNewtypeDeriving
+                       GeneralizedNewtypeDeriving, RecordWildCards
     GHC-Options:       -O2
 
 Executable halp
